# chip-8

./: Cargo.toml  README.md  build.sh  index.html  run.sh
docs/: index.html
docs/js/: chip8.js  chip8_bg.wasm  chipGame.js  emulator.js  index.js  stateMessage.js  terminal.js
docs/js/states/: aboutState.js  mainMenuState.js  pauseState.js  playState.js  selectGameState.js  state.js
src/: lib.rs
src/chip8/: cpu.rs  key.rs  memory.rs  mod.rs  opcode.rs
web/: emulator.js  glitch.js  index.html  index.js  mainMenuState.js  state.js  terminal.css  terminal.js
web/css/: index.css  terminal.css
web/js/: emulator.js  index.js  rand.js  settings.js  stateMessage.js  terminal.js
web/js/states/: delaySettingsState.js  editDelayValueState.js  mainMenuState.js  pauseState.js  playState.js  selectGameState.js  settingsState.js
web/static/: index.js
web/wasm/: chip8.js  chip8_bg.wasm
