[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.83"
js-sys = "0.3.55"

[lib]
crate-type = ["cdylib"]


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]